<resources>
    <string name="app_name">Challenge</string>

    <string name="URL">https://itunes.apple.com/us/rss/</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="StringFreePriceDatabaBase">Free</string>
    <string name="btnDetailsInstalar">Instalar</string>
    <string name="TextNotProduct">There are no products in this category</string>
    <string name="textNotLoadDataBase">Es la primera vez que inicias la aplicacion? si es asi, solo la primera vez necesitamos que estes conectado a internet</string>
    <string name="all_categories">All Categories</string>
    <string name="utilities">Utilities</string>
    <string name="games">Games</string>
    <string name="photo_and_videos">Photo And Videos</string>
    <string name="social_networking">Social Networking</string>
    <string name="navigation">Navigation</string>
    <string name="livestyle">LiveStyle</string>
    <string name="music">Music</string>
    <string name="productivity">Productivity</string>
    <string name="entretaiment">Entretaiment</string>
    <string name="finance">Finance</string>
    <string name="instanceCategoryNull">null</string>
    <string name="InstanceCategoryUtilities">Utilities</string>
    <string name="InstanceCategoryGames">Games</string>
    <string name="InstanceCategoryPhotoAndVideo"><![CDATA[Photo & Video]]></string>
    <string name="InstanceCategorySocialNetworking">Social Networking</string>
    <string name="InstanceCategoryNavigation">Navigation</string>
    <string name="InstanceCategoryLifestyle">Lifestyle</string>
    <string name="InstanceCategoryMusic">Music</string>
    <string name="InstanceCategoryProductivity">Productivity</string>
    <string name="InstanceCategoryEntretaiment">Entertainment</string>
    <string name="InstanceCategoryFinance">Finance</string>
</resources>
